@add prebuild library for win32

--- a/lib/lib3rdparty/lua/proj.vs2008/lua.vcproj
+++ b/lib/lib3rdparty/lua/proj.vs2008/lua.vcproj
@@ -18,7 +18,7 @@
 	<Configurations>
 		<Configuration
 			Name="Debug|Win32"
-			OutputDirectory="../../../library/win32/"
+			OutputDirectory="../../../library/win32/3rdparty"
 			IntermediateDirectory="../../../library/win32/obj/$(ProjectName).debug"
 			ConfigurationType="4"
 			CharacterSet="0"
@@ -80,7 +80,7 @@
 		</Configuration>
 		<Configuration
 			Name="Release|Win32"
-			OutputDirectory="../../../library/win32/"
+			OutputDirectory="../../../library/win32/3rdparty"
 			IntermediateDirectory="../../../library/win32/obj/$(ProjectName).release"
 			ConfigurationType="4"
 			CharacterSet="0"
