--- a/lib/libfaeris/proj.vs2008/faeris.vcproj
+++ b/lib/libfaeris/proj.vs2008/faeris.vcproj
@@ -2,7 +2,7 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="9.00"
-	Name="faeris"
+	Name="libfaeris"
 	ProjectGUID="{1A220C0A-1B8C-4B0D-9EF8-157B34855925}"
 	RootNamespace="faeris"
 	Keyword="Win32Proj"
