--- a/application/L_Faeris/proj.win32/FaerisWin32.vcproj
+++ b/application/L_Faeris/proj.win32/FaerisWin32.vcproj
@@ -61,10 +61,10 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="glew32.lib opengl32.lib freetyped.lib fmodex.lib zlibd.lib libpngd.lib luad.lib minizipd.lib curld.lib faerisd.lib pthreadVC.lib tolua++d.lib luaexportd.lib libaudiod.lib networkd.lib wsock32.lib Wldap32.lib Ws2_32.lib"
+				AdditionalDependencies="glew32.lib opengl32.lib freetyped.lib fmodex.lib zlibd.lib libpngd.lib luad.lib minizipd.lib curld.lib libfaerisd.lib pthreadVC.lib tolua++d.lib libluaexportd.lib libaudiod.lib libnetworkd.lib wsock32.lib Wldap32.lib Ws2_32.lib"
 				OutputFile="$(OutDir)\$(ProjectName)_D.exe"
 				LinkIncremental="2"
-				AdditionalLibraryDirectories="../../../lib/library/win32"
+				AdditionalLibraryDirectories="../../../lib/library/win32/3rdparty;../../../lib/library/win32"
 				GenerateDebugInformation="true"
 				SubSystem="1"
 				TargetMachine="1"
@@ -96,7 +96,7 @@
 			OutputDirectory="../bin"
 			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="1"
-			UseOfMFC="2"
+			UseOfMFC="0"
 			CharacterSet="1"
 			WholeProgramOptimization="1"
 			>
@@ -138,10 +138,10 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="glew32.lib opengl32.lib freetype.lib fmodex.lib zlib.lib libpng.lib lua.lib minizip.lib curl.lib faeris.lib pthreadVC.lib tolua++.lib luaexport.lib libaudio.lib network.lib wsock32.lib Wldap32.lib Ws2_32.lib kernel32.lib user32.lib gdi32.lib winspool.lib comdlg32.lib advapi32.lib shell32.lib ole32.lib oleaut32.lib uuid.lib odbc32.lib odbccp32.lib"
+				AdditionalDependencies="glew32.lib opengl32.lib freetype.lib fmodex.lib zlib.lib libpng.lib lua.lib minizip.lib curl.lib libfaeris.lib pthreadVC.lib tolua++.lib libluaexport.lib libaudio.lib libnetwork.lib wsock32.lib Wldap32.lib Ws2_32.lib kernel32.lib user32.lib gdi32.lib winspool.lib comdlg32.lib advapi32.lib shell32.lib ole32.lib oleaut32.lib uuid.lib odbc32.lib odbccp32.lib"
 				OutputFile="$(OutDir)\$(ProjectName)_R.exe"
 				LinkIncremental="1"
-				AdditionalLibraryDirectories="../../../lib/library/win32"
+				AdditionalLibraryDirectories="../../../lib/library/win32/3rdparty;../../../lib/library/win32"
 				IgnoreDefaultLibraryNames=""
 				GenerateDebugInformation="true"
 				GenerateMapFile="true"
