--- a/lib/lib3rdparty/zlib/proj.vs2008/zlib.vcproj
+++ b/lib/lib3rdparty/zlib/proj.vs2008/zlib.vcproj
@@ -18,7 +18,7 @@
 	<Configurations>
 		<Configuration
 			Name="Debug|Win32"
-			OutputDirectory="../../../library/win32/"
+			OutputDirectory="../../../library/win32/3rdparty"
 			IntermediateDirectory="../../../library/win32/obj/$(ProjectName).debug"
 			ConfigurationType="4"
 			CharacterSet="1"
@@ -81,7 +81,7 @@
 		</Configuration>
 		<Configuration
 			Name="Release|Win32"
-			OutputDirectory="../../../library/win32/"
+			OutputDirectory="../../../library/win32/3rdparty"
 			IntermediateDirectory="../../../library/win32/obj/$(ProjectName).release"
 			ConfigurationType="4"
 			CharacterSet="1"
