--- a/application/L_Faeris/proj.android/AndroidManifest.xml
+++ b/application/L_Faeris/proj.android/AndroidManifest.xml
@@ -12,6 +12,12 @@
 	<uses-permission android:name="android.permission.RAISED_THREAD_PRIORITY" />
 	<uses-permission android:name="android.permission.WAKE_LOCK" />
 	<uses-permission android:name="android.permission.READ_PHONE_STATE" />
+	<uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    
     <application
         android:allowBackup="true"
         android:icon="@drawable/faeris_logo"
@@ -29,4 +35,4 @@
         </activity>
     </application>
 
-</manifest>
+</manifest> 
