--- a/application/L_Faeris/proj.android/project.properties
+++ b/application/L_Faeris/proj.android/project.properties
@@ -12,4 +12,4 @@
 
 # Project target.
 target=android-10
-android.library.reference.1=../../../libfaeris/proj.android
+android.library.reference.1=../../../lib/libfaeris/proj.android
