@add spine sprite support(80%)

--- a/application/L_Faeris/proj.win32/FaerisWin32.vcproj
+++ b/application/L_Faeris/proj.win32/FaerisWin32.vcproj
@@ -61,7 +61,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="glew32.lib opengl32.lib freetyped.lib fmodex.lib zlibd.lib libpngd.lib luad.lib minizipd.lib curld.lib libfaerisd.lib pthreadVC.lib tolua++d.lib libluaexportd.lib libaudiod.lib libnetworkd.lib wsock32.lib Wldap32.lib Ws2_32.lib"
+				AdditionalDependencies="glew32.lib opengl32.lib freetyped.lib fmodex.lib zlibd.lib libpngd.lib luad.lib minizipd.lib curld.lib libfaerisd.lib pthreadVC.lib tolua++d.lib libluaexportd.lib libaudiod.lib libnetworkd.lib libspinesprited.lib wsock32.lib Wldap32.lib Ws2_32.lib"
 				OutputFile="$(OutDir)\$(ProjectName)_D.exe"
 				LinkIncremental="2"
 				AdditionalLibraryDirectories="../../../lib/library/win32/3rdparty;../../../lib/library/win32"
