--- a/lib/libextends/libluaexport/pkg/makefile
+++ b/lib/libextends/libluaexport/pkg/makefile
@@ -1,7 +1,17 @@
-main:
+
+
+linux:
 	make TOLUA=tolua++_linux.exe  -C libextends 
 	make TOLUA=tolua++_linux.exe  -C libluascript
 	make TOLUA=tolua++_linux.exe  -C libfaeris
+	make TOLUA=tolua++_linux.exe  -C libspinesprite
+
+
+win32:
+	make TOLUA=tolua++_win32.exe  -C libextends 
+	make TOLUA=tolua++_win32.exe  -C libluascript
+	make TOLUA=tolua++_win32.exe  -C libfaeris
+	make TOLUA=tolua++_win32.exe  -C libspinesprite
 
 
 
