--- a/lib/libextends/libspinesprite/proj.vs2008/libspinesprite.vcproj
+++ b/lib/libextends/libspinesprite/proj.vs2008/libspinesprite.vcproj
@@ -18,8 +18,8 @@
 	<Configurations>
 		<Configuration
 			Name="Debug|Win32"
-			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
-			IntermediateDirectory="$(ConfigurationName)"
+			OutputDirectory="../../../library/win32/"
+			IntermediateDirectory="../../../library/win32/obj/$(ProjectName).debug"
 			ConfigurationType="4"
 			CharacterSet="1"
 			>
@@ -61,6 +61,7 @@
 			/>
 			<Tool
 				Name="VCLibrarianTool"
+				OutputFile="$(OutDir)\$(ProjectName)d.lib"
 			/>
 			<Tool
 				Name="VCALinkTool"
@@ -147,6 +148,14 @@
 		<Filter
 			Name="src"
 			>
+			<File
+				RelativePath="..\src\FsSpineExtention.cc"
+				>
+			</File>
+			<File
+				RelativePath="..\src\FsSpineSprite.cc"
+				>
+			</File>
 			<File
 				RelativePath="..\src\FsSpineSprite.h"
 				>
