@add spine sprite(linux project)

--- a/application/L_Faeris/proj.linux/makefile.debug
+++ b/application/L_Faeris/proj.linux/makefile.debug
@@ -40,6 +40,7 @@ LINK_LIB= -lfaeris \
 		  -lminizip \
 		  -lluaexportd \
 		  -laudio  \
+		  -lspinesprite \
 		  -lfmodex \
 		  -lnetwork \
 		  -lcurl \
