--- a/lib/libextends/libluaexport/proj.linux/makefile
+++ b/lib/libextends/libluaexport/proj.linux/makefile
@@ -16,11 +16,13 @@ INCLUDE_DIR=-I../src \
 			-I../../../lib3rdparty/lua/include \
 			-I../../../libextends/libaudio/src \
 			-I../../../libextends/libnetwork/src \
+			-I../../../libextends/libspinesprite/src \
 
 
 #Source File 
 SRC=  luaexport/FsLibAudioExport.cc \
 	  luaexport/FsLibNetworkExport.cc \
+	  luaexport/FsLibSpineSprite.cc \
 	  luaexport/FsLibFaerisExport.cc \
 	  luaexport/FsLibLuaScript.cc \
 	  luaexport/FsLuaFuncExport.cc \
