@add fgz package (a zip like package,used to pack file together) support(40%)

--- a/lib/libfaeris/proj.vs2008/faeris.vcproj
+++ b/lib/libfaeris/proj.vs2008/faeris.vcproj
@@ -738,6 +738,14 @@
 						>
 					</File>
 					<File
+						RelativePath="..\src\support\data\FsFgzReader.cc"
+						>
+					</File>
+					<File
+						RelativePath="..\src\support\data\FsFgzReader.h"
+						>
+					</File>
+					<File
 						RelativePath="..\src\support\data\FsHash.cc"
 						>
 					</File>
