@add fgz package support(90%)

--- a/lib/libfaeris/proj.vs2008/faeris.vcproj
+++ b/lib/libfaeris/proj.vs2008/faeris.vcproj
@@ -175,6 +175,14 @@
 				Name="io"
 				>
 				<File
+					RelativePath="..\src\io\FsFgzPackage.cc"
+					>
+				</File>
+				<File
+					RelativePath="..\src\io\FsFgzPackage.h"
+					>
+				</File>
+				<File
 					RelativePath="..\src\io\FsFile.cc"
 					>
 				</File>
