--- a/lib/lib3rdparty/libpng/proj.linux/makefile
+++ b/lib/lib3rdparty/libpng/proj.linux/makefile
@@ -7,7 +7,7 @@ FLAGS_RELEASE= -O3
 
 
 #Project infor 
-PROJECT_PATH= ../../../library/linux/
+PROJECT_PATH= ../../../library/linux/3rdparty/
 PROJECT=libpng
 SRC_DIR=../src
 INCLUDE_DIR= -I./include -I../../zlib/include
