@add keypad dispacher support

--- a/lib/libextends/libluaexport/pkg/libspinesprite/makefile
+++ b/lib/libextends/libluaexport/pkg/libspinesprite/makefile
@@ -1,5 +1,5 @@
 main:
-	../../tool/$(TOLUA)  -o ../../src/luaexport/FsLibSpineSprite.cc FsSpineSprite.pkg
+	../../tool/$(TOLUA) -L "../basic.lua" -o ../../src/luaexport/FsLibSpineSprite.cc FsSpineSprite.pkg
 
 
 
