--- a/application/L_Faeris/proj.win32/FaerisWin32.vcproj
+++ b/application/L_Faeris/proj.win32/FaerisWin32.vcproj
@@ -18,7 +18,7 @@
 	<Configurations>
 		<Configuration
 			Name="Debug|Win32"
-			OutputDirectory="../bin"
+			OutputDirectory="C:\Program Files\NosicLin\Faeris"
 			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="1"
 			CharacterSet="1"
