--- a/lib/libextends/libluaexport/proj.vs2008/luaexport.vcproj
+++ b/lib/libextends/libluaexport/proj.vs2008/luaexport.vcproj
@@ -199,6 +199,14 @@
 					>
 				</File>
 				<File
+					RelativePath="..\src\luaext\FsLuaSchedulerTarget.cc"
+					>
+				</File>
+				<File
+					RelativePath="..\src\luaext\FsLuaSchedulerTarget.h"
+					>
+				</File>
+				<File
 					RelativePath="..\src\luaext\FsLuaSysEventListener.cc"
 					>
 				</File>
