--- a/tool/binsrc/tolua++/proj.win32/tolua++.vcproj
+++ b/tool/binsrc/tolua++/proj.win32/tolua++.vcproj
@@ -41,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="../../../platform/thirdparty/win32/lua;&quot;../../../platform/thirdparty/win32/tolua++&quot;"
+				AdditionalIncludeDirectories="&quot;../../../../lib/lib3rdparty/tolua++/include&quot;;../../../../lib/lib3rdparty/lua/include"
 				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;_CRT_SECURE_NO_WARNINGS"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -64,7 +64,7 @@
 				AdditionalDependencies="tolua++.lib  lua.lib"
 				OutputFile="../../bin/win32/$(ProjectName).exe"
 				LinkIncremental="2"
-				AdditionalLibraryDirectories="../../../build/win32/prebuild/debug"
+				AdditionalLibraryDirectories="../../../../lib/library/win32/3rdparty"
 				GenerateDebugInformation="true"
 				SubSystem="1"
 				TargetMachine="1"
@@ -179,15 +179,15 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
-				RelativePath="..\tolua.c"
+				RelativePath="..\src\tolua.c"
 				>
 			</File>
 			<File
-				RelativePath="..\toluabind.c"
+				RelativePath="..\src\toluabind.c"
 				>
 			</File>
 			<File
-				RelativePath="..\toluabind.h"
+				RelativePath="..\src\toluabind.h"
 				>
 			</File>
 		</Filter>
