@lock entity num in layer when update

--- a/lib/libfaeris/proj.vs2008/faeris.vcproj
+++ b/lib/libfaeris/proj.vs2008/faeris.vcproj
@@ -570,6 +570,14 @@
 						>
 					</File>
 					<File
+						RelativePath="..\src\support\util\FsSlowDict.cc"
+						>
+					</File>
+					<File
+						RelativePath="..\src\support\util\FsSlowDict.h"
+						>
+					</File>
+					<File
 						RelativePath="..\src\support\util\FsString.cc"
 						>
 					</File>
