@add textinput method support(60%)

--- a/lib/libfaeris/proj.vs2008/faeris.vcproj
+++ b/lib/libfaeris/proj.vs2008/faeris.vcproj
@@ -426,6 +426,14 @@
 					Name="event"
 					>
 					<File
+						RelativePath="..\src\sys\event\FsInputTextDispatcher.cc"
+						>
+					</File>
+					<File
+						RelativePath="..\src\sys\event\FsInputtextDispatcher.h"
+						>
+					</File>
+					<File
 						RelativePath="..\src\sys\event\FsKeypadDispatcher.cc"
 						>
 					</File>
