--- a/lib/libextends/lib3rdextends/proj.win32/vs2008/lib3rdextends.vcproj
+++ b/lib/libextends/lib3rdextends/proj.win32/vs2008/lib3rdextends.vcproj
@@ -18,8 +18,8 @@
 	<Configurations>
 		<Configuration
 			Name="Debug|Win32"
-			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
-			IntermediateDirectory="$(ConfigurationName)"
+			OutputDirectory="../../../../library/win32"
+			IntermediateDirectory="../../../../library/win32/obj/$(ProjectName).debug"
 			ConfigurationType="4"
 			CharacterSet="1"
 			>
@@ -41,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="../../../lib3rdparty/Box2D;../../../libfaeris/src"
+				AdditionalIncludeDirectories="../../../../lib3rdparty/pthread/include;../../../../lib3rdparty/C99/include;../../../../lib3rdparty/Box2D;../../src;../../../../libfaeris/src"
 				PreprocessorDefinitions="WIN32;_DEBUG;_LIB"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -61,6 +61,7 @@
 			/>
 			<Tool
 				Name="VCLibrarianTool"
+				OutputFile="$(OutDir)\$(ProjectName)d.lib"
 			/>
 			<Tool
 				Name="VCALinkTool"
