更新检查更新功能

--- a/lib/libxAccess/proj.vs2008/libxAccess.vcproj
+++ b/lib/libxAccess/proj.vs2008/libxAccess.vcproj
@@ -148,11 +148,11 @@
 			Name="src"
 			>
 			<File
-				RelativePath="..\src\FsTest.cc"
+				RelativePath="..\src\FsUpdateApk.cc"
 				>
 			</File>
 			<File
-				RelativePath="..\src\FsTest.h"
+				RelativePath="..\src\FsUpdateApk.h"
 				>
 			</File>
 			<File
