@begin to support gps

--- a/application/L_Faeris/proj.win32/FaerisWin32.vcproj
+++ b/application/L_Faeris/proj.win32/FaerisWin32.vcproj
@@ -18,7 +18,7 @@
 	<Configurations>
 		<Configuration
 			Name="Debug|Win32"
-			OutputDirectory="C:\Program Files\NosicLin\Faeris"
+			OutputDirectory="C:\Program Files (x86)\NosicLin\Faeris"
 			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="1"
 			CharacterSet="1"
@@ -61,7 +61,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="glew32.lib opengl32.lib freetyped.lib fmodex.lib zlibd.lib libpngd.lib luad.lib minizipd.lib curld.lib libfaerisd.lib pthreadVC.lib tolua++d.lib libluaexportd.lib libspinesprited.lib wsock32.lib Wldap32.lib Ws2_32.lib Winmm.lib libxAccess.lib libbox2dd.lib lib3rdextendsd.lib"
+				AdditionalDependencies="glew32.lib opengl32.lib freetyped.lib fmodex.lib zlibd.lib libpngd.lib luad.lib minizipd.lib curld.lib libfaerisd.lib pthreadVC.lib tolua++d.lib libluaexportd.lib libspinesprited.lib wsock32.lib Wldap32.lib Ws2_32.lib Winmm.lib libxAccess.lib libbox2dd.lib lib3rdextendsd.lib libsensord.lib"
 				OutputFile="$(OutDir)\$(ProjectName)_D.exe"
 				LinkIncremental="2"
 				AdditionalLibraryDirectories="../../../lib/library/win32/3rdparty;../../../lib/library/win32"
