--- a/lib/libextends/libluaexport/pkg/makefile
+++ b/lib/libextends/libluaexport/pkg/makefile
@@ -11,6 +11,8 @@ win32:
 	make TOLUA=tolua++_win32.exe  -C libfaeris
 	make TOLUA=tolua++_win32.exe  -C libspinesprite
 	make TOLUA=tolua++_win32.exe  -C libbox2d 
+	make TOLUA=tolua++_win32.exe  -C libsensor
+
 
 
 
