--- a/lib/libxAccess/proj.android/.classpath
+++ b/lib/libxAccess/proj.android/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
+	<classpathentry exported="true" kind="lib" path="libs/TCAgent1.0.7.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
