--- a/lib/libxAccess/proj.android/.settings/org.eclipse.core.resources.prefs
+++ b/lib/libxAccess/proj.android/.settings/org.eclipse.core.resources.prefs
@@ -1,6 +1,8 @@
 eclipse.preferences.version=1
+encoding//src/com/ihuizhi/android/CustomerHttpClient.java=UTF-8
 encoding//src/com/ihuizhi/android/SysUtil.java=UTF-8
 encoding//src/com/ihuizhi/net/HttpAsync.java=UTF-8
 encoding//src/com/ihuizhi/net/HttpCallback.java=UTF-8
 encoding//src/com/ihuizhi/net/HttpThread.java=UTF-8
 encoding//src/com/ihuizhi/res/Constant.java=UTF-8
+encoding//src/com/ihuizhi/vo/PhoneInfoVo.java=UTF-8
