--- a/lib/libxAccess/proj.android/project.properties
+++ b/lib/libxAccess/proj.android/project.properties
@@ -13,4 +13,5 @@
 # Project target.
 target=android-8
 android.library=true
-android.library.reference.1=../../libfaeris/proj.android
+android.library.reference.1=..\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\..\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\libfaeris\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\proj.android
+android.library.reference.2=../../../../../Rwhz/libPay/ihuizhi_SDK_LibProject_1.0
