--- a/lib/libextends/lib3rdextends/proj.win32/vs2008/lib3rdextends.vcproj
+++ b/lib/libextends/lib3rdextends/proj.win32/vs2008/lib3rdextends.vcproj
@@ -41,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="../../../../lib3rdparty/pthread/include;../../../../lib3rdparty/C99/include;../../../../lib3rdparty/Box2D;../../src;../../../../libfaeris/src"
+				AdditionalIncludeDirectories="../../../../lib3rdparty/pthread/include;../../../../lib3rdparty/C99/include;../../../../lib3rdparty/Box2D;../../../../libextends/libluaexport/src;../../src;../../../../libfaeris/src"
 				PreprocessorDefinitions="WIN32;_DEBUG;_LIB"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -153,6 +153,14 @@
 			<Filter
 				Name="box2d"
 				>
+				<File
+					RelativePath="..\..\src\box2d\fb2ContactListener.cc"
+					>
+				</File>
+				<File
+					RelativePath="..\..\src\box2d\fb2ContactListener.h"
+					>
+				</File>
 				<File
 					RelativePath="..\..\src\box2d\fb2Draw.cc"
 					>
