@add vertex polygon to draw line, triangle

--- a/lib/libfaeris/proj.vs2008/faeris.vcproj
+++ b/lib/libfaeris/proj.vs2008/faeris.vcproj
@@ -905,6 +905,14 @@
 						RelativePath="..\src\stage\entity\FsSprite2DData.h"
 						>
 					</File>
+					<File
+						RelativePath="..\src\stage\entity\FsVertexPolygon.cc"
+						>
+					</File>
+					<File
+						RelativePath="..\src\stage\entity\FsVertexPolygon.h"
+						>
+					</File>
 				</Filter>
 				<Filter
 					Name="layer"
