--- a/UnitTest/memleak/action/makefile
+++ b/UnitTest/memleak/action/makefile
@@ -1,10 +1,10 @@
-PROJECT=http
+PROJECT=label_bitmap
   
 SRC=  
 
 DEBUG= 
 
-BIN=   ml_HttpGet.cc
+BIN=   ml_Action.cc
 	 
 	
 
@@ -39,15 +39,13 @@ LIB=-Llib \
 	-L../../../build/linux/prebuild/debug/ \
 	-l$(PROJECT) \
 	-l$(PROJECT)debug \
-	-lfaerisd -lcurld  -llibpngd -lzlibd   -lpthread
-
-
+	-lfaerisd   -llibpngd -lzlibd  -lX11 -lGLEW -lGL -lfreetype -lminizipd -lpthread
 
 
 
 
 main: obj lib bin $(ALL_OBJ_WITH_PATH) $(BIN_OBJ_NAME_WITH_PATH) \
-   	$(BIN_NAME_WITH_PATH)  lib/lib$(PROJECT).a
+	$(BIN_NAME_WITH_PATH)  lib/lib$(PROJECT).a
 
 lib/lib$(PROJECT).a:$(OBJ_NAME_WITH_PATH) 
 	ar cr $@ $(OBJ_NAME_WITH_PATH)
@@ -57,17 +55,17 @@ lib/lib$(PROJECT)debug.a:$(DEBUG_OBJ_NAME_WITH_PATH)
 
 
 bin/%.exe:obj/%.o lib/lib$(PROJECT).a lib/lib$(PROJECT)debug.a 
-	$(CC) $(FLAGS) -o $@ $< -Xlinker "-(" $(LIB) -Xlinker "-)"
+	$(CC)  $(FLAGS) -o $@ $< -Xlinker "-(" $(LIB) -Xlinker "-)"
 
 obj/%.o:%.cc
 	$(CC) $(FLAGS) -c -o $@ $< $(INCLUDE) 
 
 obj/%.o:debug/%.cc
 	$(CC) $(FLAGS) -c -o $@ $< $(INCLUDE) 
-	
+
 xir_grammer.cc:xir_grammer.y
 	bison xir_grammer.y -o xir_grammer.cc
-	
+
 init:
 	mkdir -p obj 
 	mkdir -p bin
@@ -96,7 +94,7 @@ depend:
 		file_name=`basename $$element`;\
 		result=`echo $$file_name | sed -e 's/.c/.o/'`;\
 		gcc -M -MT "obj/$$result" $$element $(INCLUDE) >>.$(PROJECT).dep ;\
-	done
+		done
 
 -include .$(PROJECT).dep
 
