@remove touchDispatch From Panel @add touchDispatch for Entity @add Button for easy craete ui @export button to lua(50%)

--- a/lib/libfaeris/proj.vs2008/faeris.vcproj
+++ b/lib/libfaeris/proj.vs2008/faeris.vcproj
@@ -830,6 +830,14 @@
 					Name="entity"
 					>
 					<File
+						RelativePath="..\src\stage\entity\FsButton.cc"
+						>
+					</File>
+					<File
+						RelativePath="..\src\stage\entity\FsButton.h"
+						>
+					</File>
+					<File
 						RelativePath="..\src\stage\entity\FsColorQuad2D.cc"
 						>
 					</File>
